SigmaCodebackup3rdSep/objects/Allocate_Stock_MR__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allocate_Back_Order_Quantity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allocate Back Order Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Allocate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Auto_Resv_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Auto Reservation Button</label>
        <type>Checkbox</type>
    </fields>
    <label>Allocate Stock MR</label>
</CustomObject>